ispravke slanje push  notifikacija

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,13 +25,25 @@
           placeholder="Enter tid..."
           class="form-control"
         />
+        <input
+          type="text"
+          id="messageInput"
+          name="message"
+          placeholder="Enter message..."
+          class="form-control"
+        />
         <br />
 
         <input type="submit" value="Submit" class="btn btn-primary" />
         <button id="stopConsumerBtn" type="button" class="btn btn-danger">
           Stop Consumer
         </button>
-        <button id="logBtn" type="button" class="btn btn-secondary">Log</button>
+        <button id="sendButton" type="button" class="btn btn-secondary">
+          Send Message
+        </button>
+        <button id="doScreenShot" type="button" class="btn btn-secondary">
+          Screenshot
+        </button>
       </form>
 
       <div class="messages">
