--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,10 @@
+* {
+    border: 1px solid red;
+}
+.container {
+    display: flex;
+    flex-direction: row;
+}
 body {
     padding: 5px;
     margin: 0;
